sidebar components, fixed layout breakpoints

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,5 +6,8 @@
   .navButton {
     @apply hidden h-6 cursor-pointer transition-all duration-150 ease-out hover:scale-125 md:inline-flex;
   }
+  .btn {
+    @apply h-7 hover:scale-110 cursor-pointer transition-all duration-150 ease-out
+  }
 }
 
